--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fashion-react",
+  "name": "react__portf_1",
   "homepage": "https://beliyandr.github.io/react__portf_1",
   "version": "0.1.0",
   "private": true,
@@ -13,7 +13,8 @@
     "react-scripts": "5.0.1",
     "sass": "^1.87.0",
     "scss": "^0.2.4",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "gh-pages": "^6.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
