--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react__portf_1",
-  "homepage": "https://beliyandr.github.io/react__portf_1",
+  "homepage": "https://beliyandr.github.io/react__portf_1/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
