--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -2,7 +2,8 @@ name: Deploy React App to GitHub Pages
 
 on:
   push:
-    branches: ["main"]
+    branches:
+      - main
   workflow_dispatch:
 
 permissions:
@@ -11,45 +12,44 @@ permissions:
   id-token: write
 
 concurrency:
-  group: "pages"
+  group: pages
   cancel-in-progress: false
 
 jobs:
+  build:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 18
+          cache: npm
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Build React app
+        run: npm run build
+        env:
+          CI: false
+
+      - name: Upload build artifact
+        uses: actions/upload-pages-artifact@v3
+        with:
+          path: build
+
   deploy:
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
+    needs: build
+
     steps:
-      # 1. Клонируем репозиторий
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      # 2. Устанавливаем Node.js
-      - name: Setup Node
-        uses: actions/setup-node@v4
-        with:
-          node-version: 20
-
-      # 3. Устанавливаем зависимости
-      - name: Install dependencies
-        run: npm install
-
-      # 4. Делаем билд React
-      - name: Build project
-        run: npm run build
-
-      # 5. Настраиваем Pages
-      - name: Setup Pages
-        uses: actions/configure-pages@v5
-
-      # 6. Загружаем билд
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v3
-        with:
-          path: build # 👈 важный момент: именно папка build
-
-      # 7. Деплоим на GitHub Pages
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
